@@ -1,0 +1,2 @@
+0.3	Hello
+0.7	!
