@@ -1,0 +1,3 @@
+0.5	World
+0.71	Hello World
+0.72	!
